--- a/wrangler.toml
+++ b/wrangler.toml
@@ -86,15 +86,15 @@ enabled = true
 
 # Bind a Queue producer. Use this binding to schedule an arbitrary task that may be processed later by a Queue consumer.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-[[queues.producers]]
-queue = "s3sync"
-binding = "Q"
+# [[queues.producers]]
+# queue = "s3sync"
+# binding = "Q"
 
 # Bind a Queue consumer. Queue Consumers can retrieve tasks scheduled by Producers to act on them.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#queues
-[[queues.consumers]]
-queue = "s3sync"
-max_batch_size = 1
+# [[queues.consumers]]
+# queue = "s3sync"
+# max_batch_size = 1
 
 # Bind an R2 Bucket. Use R2 to store arbitrarily large blobs of data, such as files.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#r2-buckets
@@ -113,3 +113,8 @@ max_batch_size = 1
 # [[vectorize]]
 # binding = "MY_INDEX"
 # index_name = "my-index"
+
+[[workflows]]
+name = "s3sync"
+binding = "SYNC_WORKFLOW"
+class_name = "SyncWorkflow"
